# desktop

./: README.md  create_tables.sql  find_parents.sql  get_token_usage.sql  index.html  main.tsx  package-lock.json  package.json  state.ts  style.scss  tailwind.config.js  tsconfig.json  view.tsx  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
