[package]
name = "app"
version = "0.8.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "http-multipart"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
base64 = "0.21.0"
rodio = "0.17.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
rust_tokenizers = "8.0.0"
tempfile = "3.4.0"
lazy_static = "1.4.0"
tokio = {version = "1.26.0", features = ["macros"] }
cpal = "0.15.0"
hound = "3.5.0"
dasp_sample = "0.11.0"
reqwest = "0.11.14"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
